# code-index

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  debug_server.py  deploy.sh  env.example  gcp.env  pyproject.toml  run_server.py  service.dev.yaml  test_app.py  test_main.py
scripts/: check_database.py  debug_database.py  simple_firestore_test.py  test_commit_parser.py  test_live_indexing.py  test_parser.py
specs/: spec.md
src/: __init__.py  __main__.py  main.py
src/api/: __init__.py  files.py  health.py  repositories.py
src/core/: __init__.py  cloud_run_jobs.py  commit_parser.py  config.py  database.py  indexer.py  locks.py  parser.py  repository_indexer.py
src/core/parser/: __init__.py  base.py  main.py  python.py  typescript.py
src/core/parser/typescript/: __init__.py  class_parser.py  fallback.py  main.py  query.py
src/jobs/: __init__.py  process_repository.py
src/models/: __init__.py  file_index.py  repository.py
tests/: __init__.py  test_cloud_run_jobs.py  test_gcp_integration.py  test_live_repository.py  test_models.py  test_real_repository.py
